--- a/greeting/index.html
+++ b/greeting/index.html
@@ -11,9 +11,11 @@
 <body>
 <h1>hello world</h1>
 <button id="openBtn">open</button>
+<button id="msgBtn">send message</button>
 <script>
     require('./render-process/open')
     require('./render-process/menu')
+    require('./render-process/msg-a')
 </script>
 </body>
 </html>
